# comfyui-template-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  pyproject.toml  setup.ps1  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  TODOS.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: api_nodes.json  core_nodes.json  demo_workflow_api.json  guidelines.json  onboarding_starters.json
docs/: demo.tape  pipeline-animation.py  slides.md  slides.pptx
scripts/: extract_core_nodes.py  extract_guidelines.py  update_core_nodes.py
src/composer/: __init__.py  compose.py  graph.py  layout.py  models.py  node_specs.py  scaffold.py
src/document/: __init__.py  generate.py  metadata.py  models.py  notion.py  orchestrator.py
src/onboard/: __init__.py  catalog.py  explain.py
src/registry/: __init__.py  highlights.py  models.py  search.py  spec.py
src/shared/: __init__.py  cache.py  categories.py  config.py  convert.py  format_detector.py  http.py
src/templates/: coverage.py  cross_ref.py  fetch.py  models.py  search.py
src/validator/: api_nodes.py  engine.py  models.py  rules.py  validate.py
templates/florence2-vision-ai/: README.md  build.py  index.json  submission.md  workflow.json
templates/gguf-quantized-txt2img/: README.md  (+4 more)
tests/: conftest.py  test_composer.py  test_coverage.py  test_cross_ref.py  test_document.py  test_highlights.py  test_orchestrator.py  test_search.py  test_shared.py  test_spec.py  test_templates.py  test_validator.py
(+88 files in other folders)
